fix: Fixed an issue where scrollbar would clip the content

--- a/src/app/modules/driver/components/driver-history/driver-history.component.css
+++ b/src/app/modules/driver/components/driver-history/driver-history.component.css
@@ -2,7 +2,6 @@
     display: block;
     float: right;
     height: 100%;
-    overflow-y: scroll;
     width: 350px;
     background: #d2d2d2;
 }
@@ -98,7 +97,10 @@
     width: 100%;
     height: 100%;
 }
+
 #list-holder{
+    overflow: auto;
+    overflow-y: visible;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -218,7 +220,8 @@ h1{
     padding:0;
     align-items: center;
     background-color: white;
-    overflow-y: scroll;
+    overflow: auto;
+    overflow-y: visible;
     margin-right: 20px;
     margin-top:20px;
     border-radius: 15px;
@@ -271,7 +274,8 @@ h1{
     transition: color 0.2s;
   }
 #passenger-holder{
-    overflow-x: scroll;
+    overflow: auto;
+    overflow-x: visible;
     width: 100%;
     margin-top:20px;
     border-radius: 15px;
@@ -303,7 +307,8 @@ h1{
     align-items: center;
     width:80%;
     height: 90%;
-    overflow-y: scroll;
+    overflow: auto;
+    overflow-y: visible;
     overflow-x:hidden;
     border-radius: 15px;
     background-color: #F4F4F4;
